--- a/views/home.html
+++ b/views/home.html
@@ -20,8 +20,8 @@
       padding: 20px;
     }
     .logo{
-      width: 50px;
-      height: 50px;
+      width: 500px;
+      height: 500px;
     }
     .container {
       width: 80%;
@@ -92,8 +92,8 @@
 <body>
 <!--Header-->
 <div class="header">
-  <img class="logo" src="Assets/Logo.png"/>
-<h1>TamilNadu Street Light Centralized Management</h1>
+  
+<h1><span><img class="logo" src="Assets/Logo.png"/></span> Street Light Centralized Management</h1>
 </div>
   <!---Navigation Bar-->
   <nav class="navbar">
@@ -113,16 +113,15 @@
   </nav>
 
   <!---Home page Background Picture and other items-->
-
   <div id="output"></div>
 
-  <script src="/socket.io/socket.io.js"></script>
+  <!-- <script src="/socket.io/socket.io.js"></script> -->
   <script>
-    const socket = io();
+    // const socket = io();
 
-    socket.on('arduinoData', function (data) {
-      document.getElementById('output').innerText = data;
-    });
+    // socket.on('arduinoData', function (data) {
+    //   document.getElementById('output').innerText = data;
+    // });
     const burger = document.querySelector('.burger');
     const navLinks = document.querySelector('.nav-links');
 
